--- a/website.html
+++ b/website.html
@@ -1,5 +1,5 @@
 <button>Hello</button>
 <p>paragraph of text</p>
-<a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=213s">
+<a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=213s" target="_blank">
   Link to Youtube
 </a>
