Creating two paragraphs

--- a/exercices/1a.html
+++ b/exercices/1a.html
@@ -1,3 +1,5 @@
 <button>CLick</button>
 <button>Radmir</button>
 <button>Pizza</button>
+<p>Hello World!</p>
+<p> Today I went to the grocery store</p>
