--- a/exercices/1a.html
+++ b/exercices/1a.html
@@ -3,3 +3,4 @@
 <button>Pizza</button>
 <p>Hello World!</p>
 <p> Today I went to the grocery store</p>
+<a href="https://www.google.ru/" target="_blank">Link to Google</a>
