--- a/exercices/button.html
+++ b/exercices/button.html
@@ -1,8 +1,10 @@
 <style>
 button{
-  background-color: red;
+  background-color: rgb(200, 0, 0);
   color: white;
   border: none;
+  height: 36px;
+  width: 105px;
 }
 </style>
 
