--- a/button.html
+++ b/button.html
@@ -1,5 +1,5 @@
 <style>
-button {
+.subscribe-button {
   background-color: rgb(200, 0, 0);
   color: white;
   border: none;
@@ -8,7 +8,25 @@ button {
   border-radius: 2px;
   cursor: pointer;
 }
+.join-button {
+  background-color: white;
+  border-color: rgb(19, 55, 235);
+  border-style: solid;
+  border-width: 1px;
+  color: rgb(41, 121, 240);
+  height: 36px;
+  width: 61px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 8px;
+
+}
 </style>
 
 
-<button>SUBSCRIBE</button>
+<button class="subscribe-button">
+  SUBSCRIBE
+</button>
+<button class="join-button">
+  JOIN
+</button>
