--- a/button.html
+++ b/button.html
@@ -19,6 +19,18 @@
   border-radius: 4px;
   cursor: pointer;
   margin-left: 8px;
+}
+.tweet-button  {
+  background-color: rgb(2, 158, 255);
+  color: white;
+  border: none;
+  height: 36px;
+  width: 76px;
+  border-radius: 18px;
+  margin-left: 8px;
+  font-weight: bold;
+  font-size: medium;
+  cursor: pointer;
 
 }
 </style>
@@ -30,3 +42,6 @@
 <button class="join-button">
   JOIN
 </button>
+<button class="tweet-button">
+  Tweet
+</button> 
