--- a/exercices/2a.html
+++ b/exercices/2a.html
@@ -1,3 +1,4 @@
+<html>
 <style>
 .Uber-button {
   background-color: black;
@@ -43,6 +44,48 @@
   margin-top: 13px;
   margin-left: 8px;
 }
+.strap-button {
+  background-color: white;
+  color: grey;
+  border-width: 1px;
+  border-radius: 3px;
+  cursor: pointer;
+  height: 36px;
+  width: 95px;
+  border-color: grey;
+  border-style: solid;
+  font-weight: bold;
+  font-size: small;
+  margin-left: 8px;
+}
+.apply-button {
+  background-color: rgb(10, 102, 194);
+  border: none;
+  color: white;
+  height: 36px;
+  width: 260px;
+  font-weight: bold;
+  font-size: medium;
+  cursor: pointer;
+  border-radius: 18px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+.save-button {
+  background-color: white;
+  color: blue;
+  border-color: blue;
+  height: 36px;
+  width: 65px;
+  border-width: 1px;
+  border-radius: 18px;
+  cursor: pointer;
+  font-weight: bold;
+  border-style: solid;
+}
+body {
+   background-color: orange;
+}
 </style>
 
 <button class="Uber-button">
@@ -60,3 +103,10 @@
 <button class="strap-button">
   Download
 </button>
+<button class="apply-button">
+  Apply on company website
+</button>
+<button class="save-button">
+  Save
+</button>
+</html>
