--- a/exercices/2f.html
+++ b/exercices/2f.html
@@ -28,9 +28,15 @@
    cursor: pointer;
    margin-left: 18px;
   }
+  .back-amazon {
+    color: rgb(0, 113, 133);
+    cursor: pointer;
+    font-size: large;
+    margin-left: 7px;
+  }
 </style>
 
-<a href="https://www.amazon.com/Nike-Revolution-Running-Shoes-X-Wide/dp/B09NMJBLNK/ref=sr_1_1?crid=V67VG3UJ8CFJ&keywords=nike+shoes+men&qid=1677881616&sprefix=nike+shoes%2Caps%2C204&sr=8-1" target="_blank">
+<a class="back-amazon" href="https://www.amazon.com/Nike-Revolution-Running-Shoes-X-Wide/dp/B09NMJBLNK/ref=sr_1_1?crid=V67VG3UJ8CFJ&keywords=nike+shoes+men&qid=1677881616&sprefix=nike+shoes%2Caps%2C204&sr=8-1" target="_blank">
   Back to Amazon
 </a>
 <h1>Nike Black Running Shoes</h1>
