--- a/button.html
+++ b/button.html
@@ -8,6 +8,12 @@
   border-radius: 2px;
   cursor: pointer;
 }
+.subscribe-button:hover {
+  opacity: 0.8;
+}
+.subscribe-button:active {
+  background-color: blue;
+}
 .join-button {
   background-color: white;
   border-color: rgb(19, 55, 235);
