--- a/button.html
+++ b/button.html
@@ -12,7 +12,7 @@
   opacity: 0.8;
 }
 .subscribe-button:active {
-  background-color: blue;
+  opacity: 0.5;
 }
 .join-button {
   background-color: white;
@@ -25,6 +25,13 @@
   border-radius: 4px;
   cursor: pointer;
   margin-left: 8px;
+}
+.join-button:hover {
+  background-color:rgb(41, 121, 240); 
+  color: white;
+}
+.join-button:active{
+  opacity: 0.6;
 }
 .tweet-button  {
   background-color: rgb(2, 158, 255);
