--- a/button.html
+++ b/button.html
@@ -7,6 +7,7 @@
   width: 105px;
   border-radius: 2px;
   cursor: pointer;
+  transition: opacity 0.15s;
 }
 .subscribe-button:hover {
   opacity: 0.8;
@@ -25,6 +26,8 @@
   border-radius: 4px;
   cursor: pointer;
   margin-left: 8px;
+  transition: background-color 0.15s,
+  color 0.15s;
 }
 .join-button:hover {
   background-color:rgb(41, 121, 240); 
@@ -44,6 +47,10 @@
   font-weight: bold;
   font-size: medium;
   cursor: pointer;
+  transition: box-shadow 0.15s;
+ }
+.tweet-button:hover {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
 
 }
 </style>
