--- a/button.html
+++ b/button.html
@@ -1,12 +1,15 @@
 <style>
 .subscribe-button {
-  background-color: rgb(200, 0, 0);
+  background-color: #cc0000;
   color: white;
   border: none;
-  height: 36px;
-  width: 105px;
+  padding-left: 16;
+  padding-right: 16;
+padding-top: 10;
+padding-bottom: 10;  
   border-radius: 2px;
   cursor: pointer;
+  margin-right: 12;
   transition: opacity 0.15s;
 }
 .subscribe-button:hover {
@@ -17,12 +20,19 @@
 }
 .join-button {
   background-color: white;
-  border-color: rgb(19, 55, 235);
+  border-color: rgb(6, 95, 212);
   border-style: solid;
   border-width: 1px;
   color: rgb(41, 121, 240);
-  height: 36px;
-  width: 61px;
+  margin-right: 12;
+  padding-left: 15;
+  padding-right: 15;
+  padding-top: 9;
+  padding-bottom: 9;
+  border-left: 0.800;
+  border-right: 0.800;
+  border-top: 0.800;
+  border- bottom: 0.800;
   border-radius: 4px;
   cursor: pointer;
   margin-left: 8px;
@@ -37,13 +47,15 @@
   opacity: 0.6;
 }
 .tweet-button  {
-  background-color: rgb(2, 158, 255);
+  background-color: #1d9bf0;
   color: white;
   border: none;
-  height: 36px;
-  width: 76px;
+  padding-top: 7px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 7px;
   border-radius: 18px;
-  margin-left: 8px;
+  
   font-weight: bold;
   font-size: medium;
   cursor: pointer;
